--- a/pagess/carts.html
+++ b/pagess/carts.html
@@ -1,54 +1,73 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>Admin Dashboard</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="/products.css" />
     <link rel="stylesheet" href="../styles/carts.css" />
+    <title>Admin dashboard</title>
   </head>
   <body>
     <div class="layout">
       <aside class="sidebar">
         <h2 class="logo">Admin</h2>
-        <ul class="menu">
-          <li class="active">Carts</li>
-          <li><a href="../pagess/dashboard.html">Products</a></li>
-          <li id="productsBtn"><a href="../pagess/users.html">Users</a></li>
+
+        <ul class="sidebar__ul">
+          <li class="sidebar__li">
+            <a href="../pagess/dashboard.html">Products</a>
+          </li>
+          <li class="sidebar__li">
+            <a href="../pagess/users.html">Users</a>
+          </li>
+          <li class="sidebar__li">
+            <a href="../pagess/carts.html">Carts</a></li>
         </ul>
-        <button class="logout">Logout</button>
+
+        <button class="logout__btn">
+          <a href="../index.html">LogOut</a>
+        </button>
       </aside>
 
-      <main class="main">
-        <header class="topbar">
-          <h1>Products</h1>
-          <button id="addProductBtn">+ Add Product</button>
+      <main class="dashboard">
+        <header class="dashboard__header">
+          <h1 class="dashboard__title">Carts</h1>
         </header>
 
-        <section class="content">
-          <table>
+        <div class="table__container">
+          <table class="table">
             <thead>
-              <tr>
+              <tr class="table__row1">
                 <th>ID</th>
-                <th>Title</th>
-                <th>Price</th>
+                <th>User ID</th>
+                <th>Date</th>
+                <th>Products count</th>
                 <th>Actions</th>
               </tr>
             </thead>
-            <tbody id="productList"></tbody>
+            <tbody id="cartList"></tbody>
           </table>
-        </section>
+        </div>
       </main>
     </div>
-
     <div class="modal hidden" id="modal">
       <div class="modal-box">
-        <h3 id="modalTitle">Add Product</h3>
-        <input type="text" id="title" placeholder="Title" />
-        <input type="number" id="price" placeholder="Price" />
-        <button id="saveProduct">Save</button>
-        <button class="close">Cancel</button>
+        <h3 id="modalTitle">Edit Cart</h3>
+
+        <input type="number" id="userId" placeholder="User ID" />
+        <input type="date" id="date" placeholder="Date" />
+        <input
+          type="number"
+          id="productCount"
+          placeholder="Products count"
+          min="0"
+        />
+
+        <button id="saveCart">Save</button>
+        <button id="close">Cancel</button>
       </div>
     </div>
+
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="../utils/carts.js"></script>
   </body>
-</html>
+</html> 
